--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <div>
       <ul>
           <li>bob</li>
-          <li>henriette</li>
+          <li>henrik</li>
+          <li>troels</li>
       </ul>
   </div>
 </body>
