--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Kystlinier</title>
+<!-- turfJS: Copyright (c) 2013 Morgan Herlocker -->
+<!-- leafletJS: Copyright (c) 2010-2016, Vladimir Agafonkin -->
+<!-- proj4JS: Copyright (c) 2000, Frank Warmerdam -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<link rel="icon" href="images/icon-tides-currents.ico">
+</head>
 <body>
-  <div>
-      <ul>
-          <li>bob</li>
-          <li>henrik</li>
-          <li>troels</li>
-      </ul>
-  </div>
+
+
+
 </body>
 </html>
