--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
 <head>
   <title>DTU Byg</title>
-<!-- turfJS: Copyright (c) 2013 Morgan Herlocker -->
-<!-- leafletJS: Copyright (c) 2010-2016, Vladimir Agafonkin -->
-<!-- proj4JS: Copyright (c) 2000, Frank Warmerdam -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-<link rel="icon" href="images/DTU32.ico">
+  <!-- turfJS: Copyright (c) 2013 Morgan Herlocker -->
+  <!-- leafletJS: Copyright (c) 2010-2016, Vladimir Agafonkin -->
+  <!-- proj4JS: Copyright (c) 2000, Frank Warmerdam -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/text.css">
+  <link rel="icon" href="images/DTU32.ico">
 
-<!-- leaflet -->
-<script src="js/leaflet.js"></script>
-<link rel="stylesheet" type="text/css" href="css/leaflet.css">
+  <!-- leaflet -->
+  <script src="js/leaflet.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/leaflet.css">
 
-<!-- jQuery -->
-<script src="js/jquery-3.1.1.min.js"></script>
-
+  <!-- jQuery -->
+  <script src="js/jquery-3.1.1.min.js"></script>
 </head>
 <body>
   <h4>DTU byggesagshaandtering</h4>
