--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
   <!-- leaflet -->
   <script src="js/leaflet.js"></script>
+  <script src="js/leaflet.pm.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/leaflet.css">
+  <link rel="stylesheet" type="text/css" href="css/leaflet.pm.css">
 
   <!-- jQuery -->
   <script src="js/jquery-3.1.1.min.js"></script>
