--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
 
   <!-- jQuery -->
   <script src="js/jquery-3.1.1.min.js"></script>
+
+  <!-- custom -->
+  <script src="js/custom/init.js"></script>
+  <script src="js/custom/standardFunctions.js"></script>
+  
 </head>
 <body>
   <h4>DTU byggesagshaandtering</h4>
-
-
+  <script>
+    init();
+  </script>
 </body>
 </html>
