--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DTU Byg</title>
+  <title>DTU Byggesagsh&aring;ndtering</title>
   <!-- turfJS: Copyright (c) 2013 Morgan Herlocker -->
   <!-- leafletJS: Copyright (c) 2010-2016, Vladimir Agafonkin -->
   <!-- proj4JS: Copyright (c) 2000, Frank Warmerdam -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/text.css">
   <link rel="icon" href="images/DTU32.ico">
+  <link rel="stylesheet" type="text/css" href="css/general.css">
+  <link rel="stylesheet" type="text/css" href="css/map.css">
 
   <!-- leaflet -->
   <script src="js/leaflet.js"></script>
@@ -22,10 +23,11 @@
   <!-- custom -->
   <script src="js/custom/init.js"></script>
   <script src="js/custom/standardFunctions.js"></script>
-  
+
 </head>
 <body>
-  <h4>DTU byggesagshaandtering</h4>
+  <div id="interface"></div>
+  <div id="map"></div>
   <script>
     init();
   </script>
