--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="icon" href="images/DTU32.ico">
+  <link rel="stylesheet" type="text/css" href="css/information.css">
   <link rel="stylesheet" type="text/css" href="css/general.css">
   <link rel="stylesheet" type="text/css" href="css/map.css">
 
@@ -23,6 +24,7 @@
   <!-- custom -->
   <script src="js/custom/init.js"></script>
   <script src="js/custom/standardFunctions.js"></script>
+  <script src="js/custom/testData.js"></script>
 
 </head>
 <body>
