--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
   <!-- custom -->
   <script src="js/custom/init.js"></script>
   <script src="js/custom/standardFunctions.js"></script>
+  <script src="js/custom/infoPanel.js"></script>
   <script src="js/custom/testData.js"></script>
 
 </head>
 <body>
   <div id="interface"></div>
+  <div id="attr"></div>
   <div id="map"></div>
   <script>
     init();
