--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
   <!-- jQuery -->
   <script src="js/jquery-3.1.1.min.js"></script>
 
+  <!-- Bootstrap -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap-flex.min.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.min.css">
+  <script src="js/bootstrap.min.js"></script>
+
   <!-- custom -->
   <script src="js/custom/init.js"></script>
   <script src="js/custom/standardFunctions.js"></script>
