--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 </head>
 <body>
+  <!-- basic bootstrap layout -->
   <div id="interface">
     <div id="attr">
       <div class="table"></div>
@@ -52,6 +53,9 @@
     </div>
   </div>
   <div id="map"></div>
+
+
+
   <script>
     init();
   </script>
