--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 </head>
 <body>
 
-  <div id="map"></div>
+  <div id="map">
+    <!-- <div id="options"></div> -->
+  </div>
 
   <script>
     init();
