--- a/index.html
+++ b/index.html
@@ -39,14 +39,10 @@
       <a class="logo" href="index.html">
         <img border="0" alt="Denmark's Technical University" src="images/DTU_logo_white.png">
       </a>
-      <hr />
 
       <div id="editButtons">
-        <div id="edit" class="unselectable disabled"><p>Edit</p></div>
-        <div id="polygons" class="unselectable"><p>Create polygon</p></div>
-        <div id="license" class="unselectable"><p>Create lines</p></div>
-        <div id="point" class="unselectable"><p>Create point</p></div>
-        <div id="delete" class="unselectable"><p>Delete geometry</p></div>
+        <div id="polygons" class="unselectable-text disabled"><p>Create polygon</p></div>
+        <div id="lines" class="unselectable-text disabled"><p>Create lines</p></div>
       </div>
 
     </div>
