--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="js/leaflet.js"></script>
   <script src="js/leaflet.pm.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/leaflet.css">
+  <link rel="stylesheet" type="text/css" href="css/leaflet-theme.css">
   <link rel="stylesheet" type="text/css" href="css/leaflet.pm.css">
 
   <!-- jQuery -->
@@ -37,7 +38,7 @@
   <div id="interface">
     <div id="input">
       <a class="logo" href="index.html">
-        <img border="0" alt="Denmark's Technical University" src="images/DTU_logo_white.png">
+        <img alt="Denmark's Technical University" src="images/DTU_logo_white.png">
       </a>
 
       <div id="editButtons">
