--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- leafletJS: Copyright (c) 2010-2016, Vladimir Agafonkin -->
   <script src="js/leaflet.js"></script>
   <script src="js/leaflet.pm.min.js"></script>
+
   <link rel="stylesheet" type="text/css" href="css/leaflet.css">
   <link rel="stylesheet" type="text/css" href="css/leaflet-theme.css">
   <link rel="stylesheet" type="text/css" href="css/leaflet.pm.css">
@@ -32,6 +33,7 @@
   <script src="js/custom/interface.js"></script>
   <script src="js/custom/infoPanel.js"></script>
   <script src="js/custom/testData.js"></script>
+  <script src="js/custom/GML-parser.js"></script>
 
 </head>
 <body>
