gml parser early version

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <!-- leafletJS: Copyright (c) 2010-2016, Vladimir Agafonkin -->
   <script src="js/leaflet.js"></script>
   <script src="js/leaflet.pm.min.js"></script>
-
   <link rel="stylesheet" type="text/css" href="css/leaflet.css">
   <link rel="stylesheet" type="text/css" href="css/leaflet-theme.css">
   <link rel="stylesheet" type="text/css" href="css/leaflet.pm.css">
@@ -27,8 +26,12 @@
   <!-- font awsome -->
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 
+  <!-- proj4 -->
+  <script src="js/proj4-2.3.15.js"></script>
+
   <!-- custom -->
   <script src="js/custom/init.js"></script>
+  <script src="js/custom/epsg.min.js"></script>
   <script src="js/custom/standardFunctions.js"></script>
   <script src="js/custom/interface.js"></script>
   <script src="js/custom/infoPanel.js"></script>
