--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   <!-- proj4 -->
   <script src="js/proj4-2.3.15.js"></script>
 
+  <!-- geometry -->
+  <script src="geometry/Byggepladser.js"></script>
+
   <!-- custom -->
   <script src="js/custom/init.js"></script>
   <script src="js/custom/epsg.min.js"></script>
