rough version of gml-parser

--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
 
 </head>
 <body>
+
+  <!-- TODO:
+  **  Make GML Parser parse all layers
+  **  Make infoPanel.js universal
+  **  Save changes to layers
+  **  Save styling on layers
+  **  Add wfs layers to interface (enable snapping)
+  **  Change leaflet.pm to leaflet.draw
+  **
+
+  **  After node.js Move:
+  **  Move conversion out of parser
+
+  ** style: Keep highlight while popup is open
+  **        Add toopTips
+ -->
+
+
   <div id="interface">
     <div id="input">
       <a class="logo" href="index.html">
