--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
       <div id="wfsLayers">
         <p>Loaded Layers</p>
         <ul id="layers"></ul>
+        <div id="snapping" class="off unselectable-text">
+          <p>
+            Enable Snapping
+          </p>
+        </div>
       </div>
 
     </div>
