--- a/index.html
+++ b/index.html
@@ -63,21 +63,24 @@
  -->
 
   <div id="interface">
+    <div id="openHide" class="open">
+        <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+    </div>
     <div id="input">
       <div id="menu">
         <div id="menu-view-top" class="unselectable-text menu-item">
           <p>
-            view
+            View
           </p>
         </div>
         <div id="menu-edit-top" class="unselectable-text menu-item menu-selected">
           <p>
-            edit
+            Edit
           </p>
         </div>
         <div id="menu-tools-top" class="unselectable-text menu-item">
           <p>
-            tools
+            Tools
           </p>
         </div>
       </div>
