--- a/index.html
+++ b/index.html
@@ -69,53 +69,46 @@
     </div>
     <div id="input">
       <div id="menu">
-        <div id="menu-view-top" class="unselectable-text menu-item">
-          <p>
-            View
-          </p>
-        </div>
         <div id="menu-edit-top" class="unselectable-text menu-item menu-selected">
-          <p>
-            Edit
-          </p>
+          <p>Rediger</p>
         </div>
-        <div id="menu-tools-top" class="unselectable-text menu-item">
-          <p>
-            Tools
-          </p>
+        <div id="menu-view-top" class="unselectable-text menu-item">
+          <p>Temavælger</p>
         </div>
       </div>
       <div id="menu-edit-main" class="main theme">
         <div id="editLayer">
           <div id="editButtons">
-            <div id="polygons" class="unselectable-text"><p>Create polygon</p></div>
-            <div id="lines" class="unselectable-text"><p>Create lines</p></div>
-            <div id="markers" class="unselectable-text"><p>Create markers</p></div>
+            <div id="polygons" class="unselectable-text"><p>Opret polygon</p></div>
+            <div id="lines" class="unselectable-text"><p>Opret linie</p></div>
+            <!-- <div id="markers" class="unselectable-text"><p>Create markers</p></div> -->
           </div>
           <div id="snapping" class="off unselectable-text">
             <p>Snapping</p>
           </div>
           <div id="send" class="unselectable-text">
-            <p>Send to Database</p>
+            <p>Send til Database</p>
           </div>
         </div>
       </div>
       <div id="menu-view-main" class="theme">
         <div id="wfsLayers">
-          <p>WFS layers</p>
+          <p>Vektor lag</p>
           <ul id="layers"></ul>
         </div>
         <div id="wmsLayers">
-          <p>WMS layers</p>
+          <p>Raster Lag</p>
         </div>
         <div id="getFeatureInfo" class="off unselectable-text">
-          <p>
-            GetFeatureInfo
-          </p>
+          <p>GetFeatureInfo</p>
         </div>
       </div>
     </div>
-    <div id="map"></div>
+    <div id="map">
+      <div id="bygID">
+        <p>noID</p>
+      </div>
+    </div>
   </div>
 
   <script>
