--- a/index.html
+++ b/index.html
@@ -45,12 +45,9 @@
 </head>
 <body>
   <!-- TODO:
-  **  Save changes to layers
-  **  Save styling on layers
+  **  Kosmetik
   **  Remove EPSG Files
   **  Fix Byggeri lag
-  **  Make infoPanel.js universal
-  **  Add wfs layers to interface (enable snapping)
   **  Clean and update GML-parser
 
   **  After node.js Move:
